--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li> <a href="3.html">JavaScript</a></li>
 </ol>
 <h2>WEB</h2>
-The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1] It is an information space where documents and other web resources can be accessed through the Internet using a web browser.[2] The Web has changed people's lives immeasurably.[3][4][5] It is the primary tool billions of people worldwide use to interact on the Internet.[6]
+<b>The World Wide Web (WWW)</b>, commonly known as the Web, is the world's dominant software platform.[1] It is an information space where documents and other web resources can be accessed through the Internet using a web browser.[2] The Web has changed people's lives immeasurably.[3][4][5] It is the primary tool billions of people worldwide use to interact on the Internet.[6]
 
 Web resources may be any type of downloadable media. Web pages are documents interconnected by hypertext links formatted in Hypertext Markup Language (HTML). The HTML syntax displays embedded hyperlinks with URLs, which permits users to navigate to other web resources. In addition to text, web pages may contain references to images, video, audio, and software components, which are either displayed or internally executed in the user's web browser to render pages or streams of multimedia content. Web applications are web pages that function as application software.
 
