구글애널리틱스 추가
구글 애널리틱스 추가: 웹사이트의 분석

--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>생활코딩 html강의 Web1-15.css</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C0BNM5TYBV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C0BNM5TYBV');
+</script>
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
